UI alignment fix.

--- a/src/components/navigation-bar/navigation-bar.module.scss
+++ b/src/components/navigation-bar/navigation-bar.module.scss
@@ -6,6 +6,10 @@
   margin-bottom: -18px;
 }
 
+.menu-container {
+  margin-left: -10px;
+}
+
 .link {
   box-shadow: none;
   font-size: 18px;
